deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-hiorder
  labels:
    name: ns-hiorder
    app: hiorder
